--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,3 +8,18 @@ h1 {
   color: white;
   text-align: center;
 }
+
+#toplink {
+  color: aquamarine;
+
+  text-align: center;
+}
+
+#toplink a {
+  color: aquamarine;
+  font-size: 16px;
+}
+
+#app {
+  background-image: ;
+}
