--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  text-align: center;
 }
 h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -9,17 +10,37 @@ h1 {
   text-align: center;
 }
 
-#toplink {
+h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+
+p {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 21px;
+  color: gray;
+}
+#link {
   color: aquamarine;
 
   text-align: center;
 }
 
-#toplink a {
+#link a {
   color: aquamarine;
   font-size: 16px;
 }
 
 #app {
   background-image: ;
+}
+
+#icon {
+  padding-top: 20px;
+}
+
+#footer {
+  text-align: right;
 }
